proxy/ingress-actual.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual
  namespace: actual
spec:
  ingressClassName: traefik
  rules:
    - host: actual.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actual
                port:
                  number: 5006
