proxy/ingress-adguard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: adguard
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: adguard-authentik-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["adguard.lan.home"]
  rules:
    - host: adguard.lan.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 3000
