proxy/ingress-navidrome.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: music
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["navidrome.home"]
  rules:
    - host: navidrome.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
