proxy/ingress-prowlarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: media-authentik-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["prowlarr.lan.home"]
  rules:
    - host: prowlarr.lan.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
