proxy/ingress-sonarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["sonarr.home"]
  rules:
    - host: sonarr.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
